--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,19 @@
-<h2>Please login or sign up!</h2>
-  <%= render 'form'%>
+<% provide(:title, 'Sign Up') %>
+<div class="row">
+<div class="col-md-6 col-md-offset-3">
+<h1>Please sign up!</h1>
+
+<%= form_for(@user) do |f|%>
+<%= render 'shared/user_error_messages' %>
+  <%= f.label :username%>
+  <br>
+  <%= f.text_field :username,class: 'form-control' %>
+<br>
+  <%= f.label :password %>
+  <br>
+  <%= f.password_field :password, class: 'form-control'%>
+  <br>
+  <%= f.submit%>
+  <% end %>
+</div>
+</div>
