--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,15 +1,24 @@
 <%= form_for(@book) do |f|%>
+<%= render 'shared/book_error_messages' %>
   <%= f.label :title %>
+  <br>
   <%= f.text_field :title %>
 <br>
+<br>
 <%= f.label :author %>
+<br>
 <%= f.text_field :author %>
 <br>
+<br>
 <%= f.label :user_id %>
+<br>
 <%= f.text_field :user_id %>
 <br>
+<br>
 <%= f.label :genre_id %>
+<br>
 <%= f.text_field :genre_id %>
+<br>
 
 
   <%= f.submit%>
