--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,7 @@
 <h2><%= @book.title %></h2>
 <br>
 <p> This book is written by <%=@book.author.split(" ").map {|word| word.capitalize}.join(" ")%></p>
+<br>
+<br>
+<br>
+<%=link_to "Log out", logout_path, method: :delete %>
