--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -12,12 +12,12 @@
 <br>
 <%= f.label :user_id %>
 <br>
-<%= f.text_field :user_id %>
+<%= f.text_field :user_id%>
 <br>
 <br>
 <%= f.label :genre_id %>
 <br>
-<%= f.text_field :genre_id %> #make genre a dropdown
+<%= collection_select(:book, :genre_id, Genre.all, :id, :name,{}, {:multiple => false})%>
 <br>
 
 
