Allows user to see genres they have books in

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,9 @@
 <%= @user.username%>
 <br>
+<% @user_genres.each do |g|%>
+  <%= g.name.upcase %>
+  <%end%>
+<br>
 <br>
 <br>
 <%=link_to "Log out", logout_path, method: :delete %>
