--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -10,10 +10,9 @@
 <%= f.text_field :author %>
 <br>
 <br>
-<%= f.label :user_id %>
+<%= f.hidden_field :user_id, value: current_user_id %>
 <br>
-<%= f.text_field :user_id%>
-<br>
+
 <br>
 <%= f.label :genre_id %>
 <br>
