--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,7 @@
-<%= @user.username%>
-<br>
-<% @user_genres.each do |g|%>
-  <%= g.name.upcase %>
-  <%end%>
+<h1>Hello! I am <%= @user.username%> and I like to read books in the following genre(s):</h1> <br>
+<h2><% @user_genres.each do |g|%>
+  <%=g.name.capitalize %>
+  <%end%></h2>
 <br>
 <br>
 <br>
