--- a/app/assets/stylesheets/custom.css.css
+++ b/app/assets/stylesheets/custom.css.css
@@ -20,9 +20,6 @@ input {
   }
 }
 
-.field_with_errors {
-  @extend .has-error;
-  .form-control {
-    color: $state-danger-text;
-  }
+.field_with_errors input[type='text']{
+  border: 1px solid red;
 }
