--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,9 @@
 <h2><% @user_genres.each do |g|%>
   <%=g.name.capitalize %>
   <%end%></h2>
+
 <br>
 <br>
 <br>
+<%= link_to "Create Genre", new_genre_path%><br>
 <%=link_to "Log out", logout_path, method: :delete %>
