--- a/app/views/genres/_form.html.erb
+++ b/app/views/genres/_form.html.erb
@@ -8,4 +8,5 @@
   <br>
   <br>
   <br>
+  <%= link_to "Add a book to your collection", new_book_path %> <br>
   <%=link_to "Log out", logout_path, method: :delete %>
