--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,4 +12,6 @@
 <br>
 <br>
 <br>
+<%= link_to "Add A Book", new_book_path%> <br>
+<%= link_to "Add A Genre To The Database", new_genre_path%> <br>
 <%=link_to "Log out", logout_path, method: :delete %>
