--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -25,4 +25,6 @@
 <br>
 <br>
 <br>
-<%=link_to "Log out", logout_path, method: :delete %>
+<%= link_to "Login/Sign Up using Github", "/auth/github"%> <br>
+
+<%=link_to "Already have an account? Login", login_path %>
